--- a/lectures/calibration/calibration.tex
+++ b/lectures/calibration/calibration.tex
@@ -769,7 +769,7 @@ t$. Marginalizing over $p$ proves the probabilistic calibration property
 It is also interesting to remark that this equivalence does \emph{not} extend
 beyond binary outcomes. For three or more distinct levels of a discrete outcome,
 it is no longer true that PIT calibration implies conditional calibration. See 
-Gneiting and Resin (2022).   
+\citet{gneiting2022regression}.
 
 \section{Probability versus quantile aggregation}
 \label{sec:prob_vs_quant}
